* improved type filtering for tracked services
* fixed visibility issue when invoking non-public proxied methods 
* improved waiting code to deal with spurious or accidental wakeups
* fixed issue with OsgiServiceProxyFactoryBean that caused autowiring to fail in some cases
* fixed dynamic iterator race condition triggered by fluctuating collection ends

Package org.springframework.osgi.test
* improved FelixOsgiPlatform to support API changes in Felix 1.4.x
* improved exception descriptions
* fixed issue with imported classes in the default package

Package org.springframework.osgi.util
* fixed minor displaying problem in OsgiStringUtils

Package org.springframework.osgi.web
* fixed extender configuration race condition


Changes in version 1.2.0 M2 (2008-11-24)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* raised required Spring Framework version to 2.5.6
* upgraded to Knopflerfish 2.1.1
* aligned bundle symbolic names to Spring convention (changed prefix org.springframework.bundle.osgi. to 
  org.springframework.osgi. )
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.context
* removed deprecated method AbstractDelegatedExecutionApplicationContext#getContextClassLoader
* introduced dedicated PostProcessor interfaces aware of DelegatedExecutionOsgiBundleApplicationContext's multi-stage
  refresh

Package org.springframework.osgi.extender
* improved shutdown algorithm to deal with self-referenced and transitive service references

Package org.springframework.osgi.io
* improved existence check for bundle resources
* fixed manifest headers parsing problem when dealing with nested whitespaces
* fixed handling of optional required bundles
* improved OsgiBundlePatternMatchingResolver to return ContextResources